# claude-desktop-buddy-ports

./: .gitignore  README.md
atoms3r-echo/: README.md  platformio.ini
atoms3r-echo/src/: main.cpp
cores3/: README.md  platformio.ini
cores3/src/: cat_buddy.cpp  cat_buddy.h  main.cpp
src/: ble_bridge.cpp  main.cpp
zectrix-note4/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
zectrix-note4/main/: CMakeLists.txt  ble_nus.c  ble_nus.h  buttons.c  buttons.h  config.h  epd_panel.c  epd_panel.h  idf_component.yml  main.cc  proto.cc  proto.h  speaker.c  speaker.h  ui_paint.c  ui_paint.h
