idf_component_register(
    SRCS
        "main.cc"
        "epd_panel.c"
        "ble_nus.c"
        "ui_paint.c"
        "buttons.c"
        "proto.cc"
        "speaker.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        spi_flash
        esp_driver_spi
        esp_driver_gpio
        esp_driver_i2s
        esp_driver_i2c
        nvs_flash
        bt
        esp_timer
        json
)
